--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">My App</string>
+    <string name="app_name">带你玩</string>
+    <string name="forget">忘记密码</string>
+    <string name="sign">注册</string>
+    <string name="login">登录</string>
 </resources>
